# STARS

./: .gitignore  CHANGELOG.md  DOCKER_SETUP.md  README.md  docker-compose.backend.yml  docker-compose.yml
.github/workflows/: be-installation-test.yml  changelog-ci.yml  docker.yml  fe-installation-test.yml  installation-test.yml  lint-backend.yml  lint-frontend.yml  pr-bot.yml  release.yml
backend-agent/: .env.example  .env.threat_detection.example  DYNAMIC_SECURITY_GATEWAY.md  Dockerfile  GOOGLE_CLOUD_SETUP.md  README.md  SECURITY_GATEWAY_INTEGRATION.md  SECURITY_GATEWAY_INTEGRATION_GUIDE.md  THREAT_DETECTION.md  agent.py  attack.py  cli.py  database.db  google_model_armor_provider.py  llm.py  main.py  pyproject.toml  requirements.txt  security_gateway.py  services.py  status.py  test_dynamic_security.py  test_google_model_armor.py  test_security_integration.py  test_threat_detection.py  threat_detection.py  threat_keywords.txt  threat_patterns.json  tools.py
backend-agent/app/: routes.py  utils.py
backend-agent/app/db/: models.py
backend-agent/data/: intro.txt
backend-agent/data/artprompt/: notes.txt
backend-agent/data/codeattack/: notes.txt
backend-agent/data/garak/: list_attacks.txt  notes.txt
backend-agent/data/pyrit/: notes.txt
backend-agent/data/suite/: default.json
backend-agent/libs/: garak.py  pyrit.py
backend-agent/libs/data/: garak_config.yaml
frontend/: .gitignore  Dockerfile  angular.json  generate-config.sh  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app-routing.module.ts  material.module.ts
frontend/src/app/chatzone/: chatzone.component.css  chatzone.component.html  chatzone.component.ts
frontend/src/app/heatmap/: heatmap.component.css  heatmap.component.html  heatmap.component.ts
frontend/src/app/security-gateway/: security-gateway.component.css  security-gateway.component.html  security-gateway.component.ts
frontend/src/app/services/: config.service.ts  security-gateway.service.ts  web-socket.service.ts
frontend/src/app/types/: Serie.ts
frontend/src/app/weight-dialog/: weight-dialog.component.css  weight-dialog.component.html  weight-dialog.component.spec.ts  weight-dialog.component.ts
frontend/src/assets/configs/: config.json
